Update dark mode tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>VAZID - Technology and Innovation Magazine</title>
+        <title>VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast</title>
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
     </head>
@@ -57,10 +57,19 @@
 
                 <h1>Featured Blogs</h1>
                 <label>
-                    <a href="https://blog.vazid.site/google-bigquery-interview-question">BigQuery Interview Questions</a>
+                    <a href="https://blog.vazid.site/google-bigquery-interview-question"
+                        >BigQuery Interview Questions</a
+                    >
                     <span class="tag">BigQuery</span>
                     <span class="tag">Interview</span>
                 </label>
+                <label>
+                    <a href="#">Automate System Update</a>
+                    <span class="tag">Linux</span>
+                    <span class="tag">Infra</span>
+                    <span class="tag">Bash</span>
+                </label>
+
                 <label>
                     <a href="#">Building Monitoring Architecture in Azure Cloud Using Terraform</a>
                     <span class="tag">Azure</span>
