--- a/index.html
+++ b/index.html
@@ -6,12 +6,24 @@
         <title>VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast</title>
         <link rel="stylesheet" href="css/styles.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+        <link rel="icon" href="images/favicon-16x16.png" sizes="16x16" type="image/png" />
+        <link rel="icon" href="images/favicon-16x16.png" sizes="32x32" type="image/png" />
+        <link rel="icon" href="images/favicon-32x32.png" sizes="48x48" type="image/png" />
+        <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
+        <link rel="icon" href="images/favicon.ico" type="image/x-icon" />
+        <link rel="android-chrome-icon" href="images/android-chrome-192x192.png" />
+        <link rel="android-chrome-icon" href="images/android-chrome-512x512.png" />
     </head>
     <body>
         <header>
             <nav>
                 <div class="logo">
-                    <a href="../index.html"><strong>VAZID</strong></a>
+                    <a href="index.html">
+                        <!-- Light Mode Logo -->
+                        <img src="images/light-logo.png" alt="VAZID Logo Light" class="logo-light" />
+                        <!-- Dark Mode Logo -->
+                        <img src="images/dark-logo.png" alt="VAZID Logo Dark" class="logo-dark" />
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li>
