--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -3,95 +3,114 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>VAZID</title>
+        <title>VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast</title>
         <link rel="stylesheet" href="../css/styles.css" />
-        <link rel="stylesheet" href="../css/about.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+        <link rel="icon" href="../images/favicon-16x16.png" sizes="16x16" type="image/png" />
+        <link rel="icon" href="../images/favicon-16x16.png" sizes="32x32" type="image/png" />
+        <link rel="icon" href="../images/favicon-32x32.png" sizes="48x48" type="image/png" />
+        <link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
+        <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+        <link rel="android-chrome-icon" href="../images/android-chrome-192x192.png" />
+        <link rel="android-chrome-icon" href="../images/android-chrome-512x512.png" />
     </head>
     <body>
-      <header>
-        <nav>
-            <div class="logo">
-                <a href="../index.html"><strong>VAZID</strong></a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="../pages/project.html">MY CURRENT <strong>PROJECT</strong></a></li>
-                <li><a href="../pages/aboutme.html">CONNECT ME</a></li>
-                <li class="dropdown">
-                    <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
-                    <div class="dropdown-content">
-                        <a href="#">Linux</a>
-                        <a href="#">Infra</a>
-                        <a href="#">DevOps</a>
-                        <a href="#">Monitoring</a>
-                        <a href="#">Cloud</a>
-                        <a href="#">Data science</a>
-                    </div>
-                </li>
-                <li><a href="../pages/soon.html">TAKE <strong>QUIZ</strong></a></li>
-            </ul>
-            <div class="icon" onclick="toggleMenu()">☰</div>
-        </nav>
-    </header>
+        <header>
+            <nav>
+                <div class="logo">
+                    <a href="../index.html">
+                        <!-- Light Mode Logo -->
+                        <img src="../images/light-logo.png" alt="VAZID Logo Light" class="logo-light" />
+                        <!-- Dark Mode Logo -->
+                        <img src="../images/dark-logo.png" alt="VAZID Logo Dark" class="logo-dark" />
+                    </a>
+                </div>
+                <ul class="nav-links">
+                    <li>
+                        <a href="../pages/project.html">MY CURRENT <strong>PROJECTS</strong></a>
+                    </li>
+                    <li><a href="aboutme.html">CONNECT WITH ME</a></li>
+                    <li class="dropdown">
+                        <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
+                        <div class="dropdown-content">
+                            <a href="#">Linux</a>
+                            <a href="#">Infra</a>
+                            <a href="#">DevOps</a>
+                            <a href="#">Monitoring</a>
+                            <a href="#">Cloud</a>
+                            <a href="#">Data science</a>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="../pages/soon.html">TAKE <strong>QUIZ</strong></a>
+                    </li>
+                </ul>
+                <button id="dark-mode-toggle" class="dark-mode-toggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                </button>
+                <div class="icon" onclick="toggleMenu()">☰</div>
+            </nav>
+        </header>
         <div>
             <section class="content">
                 <main>
                     <div class="intro-text">
                         <p>
-                            <b>SHEIKH VAZID AHMED</b>, A freelance DevOps Engineer, Web Developer, Web Designer, and Data engineer from Mangalore, Karnataka. <br><br>
-                            CURRENTLY EXPLORING MLOPS AND DATA ANALYSIS TO DEEPEN MY EXPERTISE IN DATA. <br><br>
-                            I AM CONSTANTLY WORKING ON NEW PROJECTS TO SOLVE REAL-WORLD PROBLEMS AND IMPROVE DAILY WORKFLOWS. VISIT MY PROJECT PAGE
-                            TO SEE WHAT I'M WORKING ON.
+                            <b>SHEIKH VAZID AHMED</b>, A freelance DevOps Engineer, Web Developer, Web Designer, and
+                            Data engineer from Mangalore, Karnataka. <br /><br />
+                            CURRENTLY EXPLORING MLOPS AND DATA ANALYSIS TO DEEPEN MY EXPERTISE IN DATA. <br /><br />
+                            I AM CONSTANTLY WORKING ON NEW PROJECTS TO SOLVE REAL-WORLD PROBLEMS AND IMPROVE DAILY
+                            WORKFLOWS. VISIT MY PROJECT PAGE TO SEE WHAT I'M WORKING ON.
                         </p>
                     </div>
                 </main>
             </section>
         </div>
-        
-    <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>About VAZID</h3>
-                <p>VAZID is a Freelance DevOps engineer,
-                    Web developer,
-                    Web designer, and data engineer.</p>
-            </div>
-            <div class="footer-section">
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Articles</a></li>
-                    <li><a href="#">Categories</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </div>
-            <div class="footer-section">
-                <h3>Contact Us</h3>
-                <p>Email: info@vazid.com</p>
-                <p>Phone: (123) 456-7890</p>
-                <p>Address: 123 Tech Street, Digital City</p>
-            </div>
-        </div>
-        <div class="footer-bottom">
-            <div class="social-icons">
-                <a href="#" aria-label="Facebook"></a>
-                <a href="#" aria-label="Twitter"></a>
-                <a href="#" aria-label="Instagram"></a>
-                <a href="#" aria-label="LinkedIn"></a>
-            </div>
-            <p>© 2024 VAZID. All rights reserved.</p>
-            <p>Designed by VAZID</p>
-        </div>
-    </footer>
 
-    <script>
-        function toggleMenu() {
-            var x = document.querySelector(".nav-links");
-            if (x.style.display === "flex") {
-                x.style.display = "none";
-            } else {
-                x.style.display = "flex";
+        <footer>
+            <div class="footer-content">
+                <div class="footer-section">
+                    <h3>About VAZID</h3>
+                    <p>VAZID is a Freelance DevOps engineer, Web developer, Web designer, and data engineer.</p>
+                </div>
+                <div class="footer-section">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Articles</a></li>
+                        <li><a href="#">Categories</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                </div>
+                <div class="footer-section">
+                    <h3>Contact Us</h3>
+                    <p>Email: info@vazid.com</p>
+                    <p>Phone: (123) 456-7890</p>
+                    <p>Address: 123 Tech Street, Digital City</p>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <div class="social-icons">
+                    <a href="#" aria-label="Facebook"></a>
+                    <a href="#" aria-label="Twitter"></a>
+                    <a href="#" aria-label="Instagram"></a>
+                    <a href="#" aria-label="LinkedIn"></a>
+                </div>
+                <p>© 2024 VAZID. All rights reserved.</p>
+                <p>Designed by VAZID</p>
+            </div>
+        </footer>
+
+        <script>
+            function toggleMenu() {
+                var x = document.querySelector(".nav-links");
+                if (x.style.display === "flex") {
+                    x.style.display = "none";
+                } else {
+                    x.style.display = "flex";
+                }
             }
-        }
-    </script>
+        </script>
     </body>
 </html>
