--- a/pages/soon.html
+++ b/pages/soon.html
@@ -3,20 +3,33 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>VAZID</title>
+        <title>VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast</title>
         <link rel="stylesheet" href="../css/styles.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
+        <link rel="icon" href="../images/favicon-16x16.png" sizes="16x16" type="image/png" />
+        <link rel="icon" href="../images/favicon-16x16.png" sizes="32x32" type="image/png" />
+        <link rel="icon" href="../images/favicon-32x32.png" sizes="48x48" type="image/png" />
+        <link rel="apple-touch-icon" href="../images/apple-touch-icon.png" />
+        <link rel="icon" href="../images/favicon.ico" type="image/x-icon" />
+        <link rel="android-chrome-icon" href="../images/android-chrome-192x192.png" />
+        <link rel="android-chrome-icon" href="../images/android-chrome-512x512.png" />
     </head>
     <body>
         <header>
             <nav>
                 <div class="logo">
-                    <a href="../index.html"><strong>VAZID</strong></a>
+                    <a href="../index.html">
+                        <!-- Light Mode Logo -->
+                        <img src="../images/light-logo.png" alt="VAZID Logo Light" class="logo-light" />
+                        <!-- Dark Mode Logo -->
+                        <img src="../images/dark-logo.png" alt="VAZID Logo Dark" class="logo-dark" />
+                    </a>
                 </div>
                 <ul class="nav-links">
                     <li>
-                        <a href="../pages/project.html">MY CURRENT <strong>PROJECT</strong></a>
+                        <a href="../pages/project.html">MY CURRENT <strong>PROJECTS</strong></a>
                     </li>
-                    <li><a href="../pages/aboutme.html">CONNECT ME</a></li>
+                    <li><a href="../pages/aboutme.html">CONNECT WITH ME</a></li>
                     <li class="dropdown">
                         <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
                         <div class="dropdown-content">
@@ -29,12 +42,17 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../pages/soon.html">TAKE <strong>QUIZ</strong></a>
+                        <a href="soon.html">TAKE <strong>QUIZ</strong></a>
                     </li>
                 </ul>
+                <button id="dark-mode-toggle" class="dark-mode-toggle">
+                    <i class="fas fa-sun"></i>
+                    <i class="fas fa-moon"></i>
+                </button>
                 <div class="icon" onclick="toggleMenu()">☰</div>
             </nav>
         </header>
+
         <section class="content">
             <main>
                 <div class="soon">Comming Soon</div>
