--- a/pages/soon.html
+++ b/pages/soon.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>VAZID - DevOps Engineer, Web Developer & ML Ops Enthusiast</title>
         <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="../css/quiz.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
         <link rel="icon" href="../images/favicon-16x16.png" sizes="16x16" type="image/png" />
         <link rel="icon" href="../images/favicon-16x16.png" sizes="32x32" type="image/png" />
