--- a/pages/project.html
+++ b/pages/project.html
@@ -55,48 +55,58 @@
         </header>
 
         <section class="content">
-            <main>
-                <div class="project-list">
-                    <div class="project">
-                        <span class="project-name"
-                            ><a href="https://moosam.site/">Moosam - Your Clean Weather Companion</a></span
-                        >
-                        <span class="status launched">LAUNCHED</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">Quote App Project</span>
-                        <span class="status coming-soon">COMING SOON</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">Journey</span>
-                        <span class="status coming-soon">COMING SOON</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">Personal Dashboard Web App</span>
-                        <span class="status coming-soon">COMING SOON</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">Select Advertisements</span>
-                        <span class="status coming-soon">COMING SOON</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">Petition to Bring Back</span>
-                        <span class="status coming-soon">COMING SOON</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">District Lab</span>
-                        <span class="status in-progress">IN PROGRESS</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">Daily System Update</span>
-                        <span class="status coming-soon">COMING SOON</span>
-                    </div>
-                    <div class="project">
-                        <span class="project-name">Advertisement Agency</span>
-                        <span class="status in-progress">IN PROGRESS</span>
-                    </div>
-                </div>
-            </main>
+          
+    <main class="project-container">
+        <h1 class="page-title">Current Projects</h1>
+        <div class="project-list">
+            <div class="project">
+                <h2 class="project-name">Moosam - Your Clean Weather Companion</h2>
+                <span class="status launched">LAUNCHED</span>
+                <a href="https://moosam.site/" class="project-link">Visit Project <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">Quote App Project</h2>
+                <span class="status coming-soon">COMING SOON</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">Journey</h2>
+                <span class="status coming-soon">COMING SOON</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">Personal Dashboard Web App</h2>
+                <span class="status coming-soon">COMING SOON</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">Select Advertisements</h2>
+                <span class="status coming-soon">COMING SOON</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">Petition to Bring Back</h2>
+                <span class="status coming-soon">COMING SOON</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">District Lab</h2>
+                <span class="status in-progress">IN PROGRESS</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">Daily System Update</h2>
+                <span class="status coming-soon">COMING SOON</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+            <div class="project">
+                <h2 class="project-name">Advertisement Agency</h2>
+                <span class="status in-progress">IN PROGRESS</span>
+                <a href="#" class="project-link">Learn More <i class="fas fa-arrow-right"></i></a>
+            </div>
+        </div>
+    </main>
+
         </section>
 
         <footer>
@@ -133,7 +143,7 @@
             </div>
         </footer>
 
-        <script>
+          <script>
             function toggleMenu() {
                 var x = document.querySelector(".nav-links");
                 if (x.style.display === "flex") {
@@ -142,6 +152,12 @@
                     x.style.display = "flex";
                 }
             }
+
+            const darkModeToggle = document.getElementById("dark-mode-toggle");
+            darkModeToggle.addEventListener("click", () => {
+                document.body.classList.toggle("dark-mode");
+                darkModeToggle.classList.toggle("dark-mode");
+            });
         </script>
     </body>
 </html>
