Added automate script blog

--- a/index.html
+++ b/index.html
@@ -61,12 +61,7 @@
                     <span class="tag">Weather App</span>
                     <span class="tag">Website</span>
                 </label>
-                <label>
-                    <a href="#">Terraform Hacks: Effortlessly list available AWS Machine Images</a>
-                    <span class="tag">AWS</span>
-                    <span class="tag">Terraform</span>
-                </label>
-
+                
                 <h1>Featured Blogs</h1>
                 <label>
                     <a href="https://blog.vazid.site/google-bigquery-interview-question"
@@ -76,10 +71,10 @@
                     <span class="tag">Interview</span>
                 </label>
                 <label>
-                    <a href="#">Automate System Update</a>
+                    <a href="blogs/automatescript.html">Automate Your System Updates with a Custom Bash Script</a>
                     <span class="tag">Linux</span>
+                    <span class="tag">DevOps</span>
                     <span class="tag">Infra</span>
-                    <span class="tag">Bash</span>
                 </label>
 
                 <label>
@@ -117,6 +112,12 @@
                     <span class="tag">Linux</span>
                     <span class="tag">Project</span>
                 </label>
+                <label>
+                    <a href="#">Terraform Hacks: Effortlessly list available AWS Machine Images</a>
+                    <span class="tag">AWS</span>
+                    <span class="tag">Terraform</span>
+                </label>
+
             </section>
         </main>
 
@@ -124,7 +125,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About VAZID</h3>
-                    <p><b>VAZID</b> is a Freelance DevOps engineer, Web developer, Web designer, and data engineer.</p>
+                    <p><b>VAZID</b> is a Freelance DevOps engineer,<br> Web developer,<br> Web designer,<br> and data engineer.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
