--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -126,7 +126,10 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About VAZID</h3>
-                    <p>VAZID is a Freelance DevOps engineer, Web developer, Web designer, and data engineer.</p>
+                    <p>VAZID is a Freelance DevOps engineer,
+                        <br>Web developer,
+                        <br>Web designer, 
+                        <br>and data engineer.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
