Update css aligment

--- a/pages/soon.html
+++ b/pages/soon.html
@@ -31,8 +31,8 @@
                         <a href="../pages/project.html">MY CURRENT <strong>PROJECTS</strong></a>
                     </li>
                     <li><a href="../pages/aboutme.html">CONNECT WITH ME</a></li>
-                    <li class="dropdown">
-                        <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
+                     <li class="dropdown">
+                        <a href="#" class="dropbtn">CHECK MY <strong>BLOGS</strong></a>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
                             <a href="#">Infra</a>
