--- a/blogs/automatescript.html
+++ b/blogs/automatescript.html
@@ -30,7 +30,7 @@
         <header>
             <nav>
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="../index.html">
                         <!-- Light Mode Logo -->
                         <img src="../images/light-logo.png" alt="VAZID Logo Light" class="logo-light" />
                         <!-- Dark Mode Logo -->
@@ -41,7 +41,7 @@
                     <li>
                         <a href="../pages/project.html">MY CURRENT <strong>PROJECTS</strong></a>
                     </li>
-                    <li><a href="../pages/aboutme.html">CONNECT WITH ME</a></li>
+                    <li><a href="../pages/contact.html">CONNECT WITH ME</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropbtn">CHECK MY <strong>BLOGS</strong></a>
                         <div class="dropdown-content">
