--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
                     <li>
                         <a href="pages/project.html">MY CURRENT <strong>PROJECTS</strong></a>
                     </li>
-                    <li><a href="pages/aboutme.html">CONNECT WITH ME</a></li>
-                    <li class="dropdown">
-                        <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
+                    <li><a href="pages/contact.html">CONNECT WITH ME</a></li>
+                     <li class="dropdown">
+                        <a href="#" class="dropbtn">CHECK MY <strong>BLOGS</strong></a>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
                             <a href="#">Infra</a>
@@ -42,7 +42,7 @@
                         </div>
                     </li>
                     <li>
-                        <a href="../pages/soon.html">TAKE <strong>QUIZ</strong></a>
+                        <a href="pages/soon.html">TAKE <strong>QUIZ</strong></a>
                     </li>
                 </ul>
                 <button id="dark-mode-toggle" class="dark-mode-toggle">
