--- a/pages/project.html
+++ b/pages/project.html
@@ -30,9 +30,9 @@
                     <li>
                         <a href="project.html">MY CURRENT <strong>PROJECTS</strong></a>
                     </li>
-                    <li><a href="../pages/aboutme.html">CONNECT WITH ME</a></li>
-                    <li class="dropdown">
-                        <button class="dropbtn">CHECK MY <strong>BLOGS</strong></button>
+                    <li><a href="../pages/contact.html">CONNECT WITH ME</a></li>
+                      <li class="dropdown">
+                        <a href="#" class="dropbtn">CHECK MY <strong>BLOGS</strong></a>
                         <div class="dropdown-content">
                             <a href="#">Linux</a>
                             <a href="#">Infra</a>
