Update css aligment

--- a/pages/soon.html
+++ b/pages/soon.html
@@ -30,7 +30,7 @@
                     <li>
                         <a href="../pages/project.html">MY CURRENT <strong>PROJECTS</strong></a>
                     </li>
-                    <li><a href="../pages/aboutme.html">CONNECT WITH ME</a></li>
+                    <li><a href="../pages/contact.html">CONNECT WITH ME</a></li>
                      <li class="dropdown">
                         <a href="#" class="dropbtn">CHECK MY <strong>BLOGS</strong></a>
                         <div class="dropdown-content">
