--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
 
         <main role="main">
             <section class="content">
-                <h1>Launched Projects</h1>
+                <h1>Launched Work</h1>
                 <label>
                     <a href="#">Moosam - Your Weather Companion</a>
                     <span class="tag">Weather App</span>
                     <span class="tag">Website</span>
                 </label>
                 
-                <h1>Featured Blogs</h1>
+                <h1>Currently working </h1>
                 <label>
                     <a href="https://blog.vazid.site/google-bigquery-interview-question"
                         >BigQuery Interview Questions</a
@@ -84,7 +84,7 @@
                     <span class="tag">Terraform</span>
                 </label>
 
-                <h1>More Blogs</h1>
+                <h1>More work</h1>
                 <label>
                     <a href="#">Personal Linux Monitoring Dashboard Using Grafana</a>
                     <span class="tag">Linux</span>
