--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <section class="content">
                 <h1>Launched Work</h1>
                 <label>
-                    <a href="#">Moosam - Your Weather Companion</a>
+                    <a href="https://moosam.site/">Moosam - Your Weather Companion</a>
                     <span class="tag">Weather App</span>
                     <span class="tag">Website</span>
                 </label>
@@ -124,8 +124,8 @@
         <footer>
             <div class="footer-content">
                 <div class="footer-section">
-                    <h3>About VAZID</h3>
-                    <p><b>VAZID</b> is a Freelance DevOps engineer,<br> Web developer,<br> Web designer,<br> and data engineer.</p>
+                    <h3>About</h3>
+                    <p>Sheikh Vazid Ahmed is a versatile DevOps Engineer and Cloud Solution Architect with over 6+ years of experience in designing and implementing robust, scalable cloud architectures across GCP, AWS, and Azure platforms. With expertise in cloud migrations, infrastructure automation, and data engineering solutions, Sheikh excels at translating complex business requirements into innovative technical solutions, consistently improving efficiency and reducing costs for enterprise clients.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
