--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>About</h3>
-                    <p>Sheikh Vazid Ahmed is a versatile DevOps Engineer and Cloud Solution Architect with over 6+ years of experience in designing and implementing robust, scalable cloud architectures across GCP, AWS, and Azure platforms. With expertise in cloud migrations, infrastructure automation, and data engineering solutions, Sheikh excels at translating complex business requirements into innovative technical solutions, consistently improving efficiency and reducing costs for enterprise clients.</p>
+                    <p><b>Sheikh Vazid Ahmed</b> is a versatile DevOps Engineer and Cloud Solution Architect with over 6+ years of experience in designing and implementing robust, scalable cloud architectures across GCP, AWS, and Azure platforms.</br> With expertise in cloud migrations, infrastructure automation, and data engineering solutions, Sheikh excels at translating complex business requirements into innovative technical solutions, consistently improving efficiency and reducing costs for enterprise clients.</p>
                 </div>
                 <div class="footer-section">
                     <h3>Quick Links</h3>
